# markdown-pdf

./: .coveragerc  .flake8  .gitignore  .pylintrc  .pypirc  LICENSE  MANIFEST.in  README.md  README_ru.md  history.txt  makefile  makepdf.py  plugins.md  plugins_ru.md  pyproject.toml  requirements.txt  requirements38.txt  setup.cfg
.github/workflows/: pep257.yml  py3.yml
fixture/: hrefs.md  latex1.md  latex2.md  mermaid.md  plantuml.md
markdown_pdf/: __init__.py  tex.py
markdown_pdf/pligins/: README.md  __init__.py  helpers.py  mermaid.py  plantuml.py
tests/: conftest.py  requirements.txt
tests/test/: __init__.py  test_converter.py  test_hooks.py  test_latex.py  test_plantuml.py  test_readme.py  test_tables.py
tests/test/test_plugins/: __init__.py  test_init.py  test_mermaid.py  test_plantuml.py
