[build-system]
requires = [
    "setuptools>=42",
    "wheel"
]
build-backend = "setuptools.build_meta"

[project]
name = "markdown_pdf"
version = "1.12"
description = "Markdown to pdf renderer"
readme = { file = "README.md", content-type = "text/markdown" }
requires-python = ">=3.8"
license = "AGPL-3.0-only"
authors = [
    { name = "Vitaly Bogomolov", email = "mail@vitaly-bogomolov.ru" }
]
classifiers = [
    "Programming Language :: Python :: 3",
    "Operating System :: OS Independent"
]
dependencies = [
    "PyMuPDF==1.24.6; python_version<'3.9'",
    "PyMuPDF>=1.25.3; python_version>'3.8'",
    "markdown-it-py==3.0.0; python_version>='3.8'",
    "plantuml==0.3.0",
    "six==1.17.0"
]

[project.optional-dependencies]
dev = [
    "flake8",
    "pylint",
    "pydocstyle",
    "pytest",
    "pytest-cov",
    "codacy-coverage",
]

[project.urls]
"Homepage" = "https://github.com/vb64/markdown-pdf"
"Bug Tracker" = "https://github.com/vb64/markdown-pdf/issues"

[tool.setuptools]
packages = ["markdown_pdf", "markdown_pdf.pligins"]

[tool.setuptools.package-data]
"markdown_pdf" = ["py.typed"]

[tool.pytest.ini_options]
filterwarnings = [
    # note the use of single quote below to denote "raw" strings in TOML
    'ignore:builtin type swigvarlink has no __module__ attribute:DeprecationWarning',
    'ignore:builtin type SwigPyObject has no __module__ attribute:DeprecationWarning',
    'ignore:builtin type SwigPyPacked has no __module__ attribute:DeprecationWarning',
]
markers = [
    'external: marks a test as uses external resources'
]
