[metadata]
name = markdown_pdf
version = 1.3.100
author = Vitaly Bogomolov
author_email = mail@vitaly-bogomolov.ru
description = Markdown to pdf renderer
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/vb64/markdown-pdf
project_urls =
    Bug Tracker = https://github.com/vb64/markdown-pdf/issues
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
package_dir =
packages = markdown_pdf
python_requires = >=3.8
install_requires = 
    PyMuPDF==1.24.6; python_version<"3.9"
    PyMuPDF==1.25.3; python_version>"3.8"
    markdown-it-py==3.0.0
